<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>net.jawr</groupId>
		<artifactId>jawr-core-parent</artifactId>
		<version>3.6-SNAPSHOT</version>
	</parent>
	<artifactId>jawr-integration-test</artifactId>
	<packaging>war</packaging>
	<name>jawr-integration-test</name>
	<description>Basic web app for Jawr integration test</description>
	<properties>
		<jetty.version>6.1.10</jetty.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>net.jawr</groupId>
			<artifactId>jawr-core</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>net.jawr</groupId>
			<artifactId>jawr-integration-test-utils</artifactId>
			<version>${project.version}</version>
			<type>test-jar</type>
		</dependency>
		<dependency>
			<groupId>com.carrotsearch</groupId>
			<artifactId>smartsprites</artifactId>
			<!-- TODO : replace by version 0.2.11 containing the feature to track 
				sprite images when available -->
			<exclusions>
				<exclusion>
					<groupId>com.google.collections</groupId>
					<artifactId>google-collections</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<!-- Google closure dependency -->
		<dependency>
			<groupId>com.google.javascript</groupId>
			<artifactId>closure-compiler</artifactId>
		</dependency>
		<dependency>
			<groupId>maven</groupId>
			<artifactId>maven-jetty-plugin</artifactId>
			<version>1.1</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>net.sf.ehcache</groupId>
			<artifactId>ehcache</artifactId>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.mozilla</groupId>
			<artifactId>rhino</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.yahoo.platform.yui</groupId>
			<artifactId>yuicompressor</artifactId>
			<scope>provided</scope>
			<exclusions>
				<exclusion>
					<groupId>rhino</groupId>
					<artifactId>js</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mortbay.jetty</groupId>
			<artifactId>jetty</artifactId>
			<version>${jetty.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mortbay.jetty</groupId>
			<artifactId>servlet-api-2.5</artifactId>
			<version>${jetty.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.mortbay.jetty</groupId>
			<artifactId>jsp-api-2.1</artifactId>
			<version>${jetty.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mortbay.jetty</groupId>
			<artifactId>jsp-2.1</artifactId>
			<version>${jetty.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mortbay.jetty</groupId>
			<artifactId>jetty-servlet-tester</artifactId>
			<version>${jetty.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>net.sourceforge.htmlunit</groupId>
			<artifactId>htmlunit</artifactId>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-eclipse-plugin</artifactId>
				<configuration>
					<downloadSources>true</downloadSources>
					<wtpversion>1.5</wtpversion>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<skip>true</skip>
					<argLine>-XX:MaxPermSize=512m -verbose:gc -XX:+PrintClassHistogram</argLine>
				</configuration>
				<executions>
					<execution>
						<id>surefire-it</id>
						<phase>integration-test</phase>
						<goals>
							<goal>test</goal>
						</goals>
						<configuration>
							<skip>false</skip>
							<systemProperties>
								<property>
									<name>test.web.xml.path</name>
									<value>${basedir}/target/jawr-integration-test/WEB-INF/web.xml</value>
								</property>
								<property>
									<name>test.jawr.config.path</name>
									<value>${basedir}/target/jawr-integration-test/WEB-INF/classes/jawr.properties</value>
								</property>
								<property>
									<name>test.initial.delay</name>
									<value>5000</value>
								</property>
								<property>
									<name>com.sun.management.jmxremote</name>
								</property>
								<property>
									<name>com.sun.management.jmxremote</name>
								</property>
								-XX:PermSize=1024m -XX:MaxPermSize=1024m
							</systemProperties>

						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>

		<finalName>jawr-integration-test</finalName>
	</build>
</project>
